force-app/main/default/objects/SmokeTestResult__c/SmokeTestResult__c.object-meta.xml
<!-- Data Classification: Internal | Retention: 90 days | Purge: Database.emptyRecycleBin() via scheduled batch -->
<CustomObject>
    <description>Per-scenario outcome record for a smoke test execution. Stores pass/fail status, governor limit metrics, and PII-masked error details. Master-Detail child of SmokeTestExecution__c. Data Classification: Internal. Retention: 90 days.</description>
    <label>Smoke Test Result</label>
    <nameField>
        <displayFormat>RES-{00000}</displayFormat>
        <label>Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smoke Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <indexes>
        <fullName>ScenarioName_Index</fullName>
        <label>Scenario Name Index</label>
        <fields>
            <name>ScenarioName__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
    <indexes>
        <fullName>Status_Index</fullName>
        <label>Status Index</label>
        <fields>
            <name>Status__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
</CustomObject>