force-app/main/default/objects/SmokeTestResult__c/fields/ActualState__c.field-meta.xml
<CustomField>
    <fullName>ActualState__c</fullName>
    <description>Human-readable description of the actual component state found in the org (e.g., Found and verified, Not found, Inactive). Populated by MetadataIntegrityService for ResultType__c = METADATA_INTEGRITY records.</description>
    <label>Actual State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>