force-app/main/default/objects/SmokeTestResult__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <description>API name of the metadata component that was verified (e.g., AccountService for an ApexClass). Populated by MetadataIntegrityService for ResultType__c = METADATA_INTEGRITY records.</description>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>