force-app/main/default/objects/SmokeTestResult__c/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <description>Metadata component type from the deployment manifest (e.g., ApexClass, Flow, LWC). Matches the type field in the DeploymentManifest__c JSON array. Populated by MetadataIntegrityService.</description>
    <label>Component Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>