force-app/main/default/objects/SmokeTestResult__c/fields/CPUTimeMs__c.field-meta.xml
<CustomField>
    <fullName>CPUTimeMs__c</fullName>
    <description>Apex CPU time consumed by this scenario in milliseconds. Budget limit per scenario: 5000ms.</description>
    <label>CPU Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>