force-app/main/default/objects/SmokeTestResult__c/fields/DMLStatements__c.field-meta.xml
<CustomField>
    <fullName>DMLStatements__c</fullName>
    <description>Number of DML statements consumed by this scenario within its Queueable governor context.</description>
    <label>DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>