force-app/main/default/objects/SmokeTestResult__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>PII-MASKED error message from a failed or errored scenario. IMPORTANT: This field must only be populated by the ErrorSanitizer service after applying regex-based PII masking (email, phone, SSN patterns). Raw error messages containing PII must never be persisted directly.</description>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>