force-app/main/default/objects/SmokeTestResult__c/fields/ErrorStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ErrorStackTrace__c</fullName>
    <description>PII-MASKED Apex stack trace from a failed or errored scenario. IMPORTANT: This field must only be populated by the ErrorSanitizer service after applying regex-based PII masking (email, phone, SSN patterns). Raw stack traces containing PII must never be persisted directly.</description>
    <label>Error Stack Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>