force-app/main/default/objects/SmokeTestResult__c/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <description>Master-Detail relationship to the parent SmokeTestExecution__c record. Cascade delete removes all child results when the parent execution is purged.</description>
    <label>Execution</label>
    <referenceTo>SmokeTestExecution__c</referenceTo>
    <relationshipLabel>Smoke Test Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>