force-app/main/default/objects/SmokeTestResult__c/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <description>Sequence number (1-based) indicating the order in which this scenario was executed within the suite. Used for waterfall timing display in the dashboard.</description>
    <label>Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>