force-app/main/default/objects/SmokeTestResult__c/fields/ExecutionTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTimeMs__c</fullName>
    <description>Wall-clock time to execute this individual scenario in milliseconds.</description>
    <label>Execution Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>