force-app/main/default/objects/SmokeTestResult__c/fields/ExpectedState__c.field-meta.xml
<CustomField>
    <fullName>ExpectedState__c</fullName>
    <description>Human-readable description of the expected component state (e.g., Exists in org, Active). Populated by MetadataIntegrityService for ResultType__c = METADATA_INTEGRITY records.</description>
    <label>Expected State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>