force-app/main/default/objects/SmokeTestResult__c/fields/GovernorLimitExceeded__c.field-meta.xml
<CustomField>
    <fullName>GovernorLimitExceeded__c</fullName>
    <description>Set to true when this scenario exceeded its governor limit budget (5000ms CPU, 50 SOQL, 50 DML). Three consecutive true values across scenarios trips the circuit breaker.</description>
    <defaultValue>false</defaultValue>
    <label>Governor Limit Exceeded</label>
    <type>Checkbox</type>
</CustomField>