force-app/main/default/objects/SmokeTestResult__c/fields/ResultType__c.field-meta.xml
<CustomField>
    <fullName>ResultType__c</fullName>
    <description>Distinguishes result categories — METADATA_INTEGRITY for Tooling API component verification, SCENARIO for standard smoke test scenario outcomes. Used for dashboard filtering and aggregation by check type.</description>
    <label>Result Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>