force-app/main/default/objects/SmokeTestResult__c/fields/RoleProfile__c.field-meta.xml
<CustomField>
    <fullName>RoleProfile__c</fullName>
    <description>Salesforce profile name under which this scenario was executed via System.runAs(). Null for scenarios not using role-based execution. Profile name only — no userId stored here.</description>
    <label>Role Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>