force-app/main/default/objects/SmokeTestResult__c/fields/ScenarioName__c.field-meta.xml
<CustomField>
    <fullName>ScenarioName__c</fullName>
    <description>Human-readable name of the smoke test scenario. Maps to the DeveloperName of SmokeTestScenario__mdt. Indexed for dashboard filtering.</description>
    <label>Scenario Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>