force-app/main/default/objects/SmokeTestResult__c/fields/ScenarioType__c.field-meta.xml
<CustomField>
    <fullName>ScenarioType__c</fullName>
    <description>Category of the smoke test scenario for grouping and filtering in the dashboard.</description>
    <label>Scenario Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRUD</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>PageLayout</fullName>
                <label>Page Layout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>