force-app/main/default/objects/SmokeTestResult__c/fields/SOQLQueries__c.field-meta.xml
<CustomField>
    <fullName>SOQLQueries__c</fullName>
    <description>Number of SOQL queries consumed by this scenario within its Queueable governor context.</description>
    <label>SOQL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>